tester_ft/log/compile_error_vec_17.txt
-VECTOR INSERT ITERATOR TEST-

./tmp/outfile_vec_17.cpp:38:38: error: no member named 'begin' in 'ft::vector<int>'
                ft::vector<int>::iterator its = v2.begin() + it_pos;
                                                ~~ ^
./tmp/outfile_vec_17.cpp:40:6: error: no member named 'insert' in 'ft::vector<int>'
                v2.insert(its, v2_s.begin(), (v2_s.begin() + it_pos));
                ~~ ^
./tmp/outfile_vec_17.cpp:40:23: error: no member named 'begin' in 'ft::vector<int>'
                v2.insert(its, v2_s.begin(), (v2_s.begin() + it_pos));
                               ~~~~ ^
./tmp/outfile_vec_17.cpp:40:38: error: no member named 'begin' in 'ft::vector<int>'
                v2.insert(its, v2_s.begin(), (v2_s.begin() + it_pos));
                                              ~~~~ ^
./tmp/outfile_vec_17.cpp:45:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
./tmp/outfile_vec_17.cpp:67:6: error: no member named 'insert' in 'ft::vector<int>'
                v2.insert(v2.begin(), v1_s.begin(), v1_s.end());
                ~~ ^
./tmp/outfile_vec_17.cpp:67:16: error: no member named 'begin' in 'ft::vector<int>'
                v2.insert(v2.begin(), v1_s.begin(), v1_s.end());
                          ~~ ^
7 errors generated.
